Fix SoupClientInputStream close on error

g_input/output_stream_close() always mark their stream closed, even on
error, even if their cancellable is pre-cancelled. That means we have
to guarantee that soup_message_io_finished() gets called when a
SoupClientInputStream is closed, even if an error occurs while
closing.

https://bugzilla.gnome.org/show_bug.cgi?id=711260